--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@sendgrid/mail": "^6.3.1",
-    "axios": "^0.18.1",
+     "axios": ">=0.21.1",
     "cron": "^1.7.1",
     "cross-env": "^5.2.0",
     "dateformat": "^3.0.3",
